unpackaged/main/default/objects/Contract/fields/Agreement_Category__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Category__c</fullName>
    <label>Agreement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>