unpackaged/main/default/objects/Contract/fields/Agreement_Type_Payments__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type_Payments__c</fullName>
    <label>Agreement Type (Payments)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral Bonus</fullName>
            </value>
            <value>
                <fullName>Referral Volume</fullName>
            </value>
            <value>
                <fullName>Referral Bonus &amp; Referral Volume</fullName>
            </value>
            <value>
                <fullName>Referral Bonus &amp; Referral Integrated Volume</fullName>
            </value>
            <value>
                <fullName>Integrated Volume</fullName>
            </value>
            <value>
                <fullName>Integrated Volume &amp; Referral Bonus</fullName>
            </value>
            <value>
                <fullName>Royalty Free</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>