unpackaged/main/default/objects/Contract/fields/Agreement_Type_Software__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type_Software__c</fullName>
    <label>Agreement Type (Software)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASEpeer Integration Single Rev Share</fullName>
            </value>
            <value>
                <fullName>CASEpeer Integration Reciprocal Rev Share</fullName>
            </value>
            <value>
                <fullName>CASEpeer Integration No Rev Share</fullName>
            </value>
            <value>
                <fullName>Docketwise Integration Single Rev Share</fullName>
            </value>
            <value>
                <fullName>Docketwise Integration Reciprocal Rev Share</fullName>
            </value>
            <value>
                <fullName>Docketwise Integration No Rev Share</fullName>
            </value>
            <value>
                <fullName>MyCase Integration Single Rev Share</fullName>
            </value>
            <value>
                <fullName>MyCase Integration Reciprocal Rev Share</fullName>
            </value>
            <value>
                <fullName>MyCase Integration No Rev Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>