unpackaged/main/default/objects/Contract/fields/Amex_Included__c.field-meta.xml
<CustomField>
    <fullName>Amex_Included__c</fullName>
    <label>Amex Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>