unpackaged/main/default/objects/Contract/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <inlineHelpText>Hyperlink to contract in Google Drive</inlineHelpText>
    <label>Contract Link</label>
    <type>Url</type>
</CustomField>