unpackaged/main/default/objects/Contract/fields/Contracted_Users__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Users__c</fullName>
    <description>Number of contracted users from the Soluno subscription.</description>
    <label>Contracted Users</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>