unpackaged/main/default/objects/Contract/fields/eCheck_included__c.field-meta.xml
<CustomField>
    <fullName>eCheck_included__c</fullName>
    <label>eCheck Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>