unpackaged/main/default/objects/Contract/fields/eCheck_Notes__c.field-meta.xml
<CustomField>
    <fullName>eCheck_Notes__c</fullName>
    <label>eCheck Notes</label>
    <type>TextArea</type>
</CustomField>