unpackaged/main/default/objects/Contract/fields/eCheck_Profit_Share__c.field-meta.xml
<CustomField>
    <fullName>eCheck_Profit_Share__c</fullName>
    <inlineHelpText>If the field &quot;eCheck Included&quot; is set to Yes, this field must be populated.</inlineHelpText>
    <label>eCheck Profit Share %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>