unpackaged/main/default/objects/Contract/fields/End_of_Current_Term_Temp__c.field-meta.xml
<CustomField>
    <fullName>End_of_Current_Term_Temp__c</fullName>
    <description>Temporary date field to track end of current term. Will be replaced with a formula field.</description>
    <label>End of Current Term</label>
    <type>Date</type>
</CustomField>