unpackaged/main/default/objects/Contract/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Non-exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>