unpackaged/main/default/objects/Contract/fields/Fee_Waiver_Applicable_to__c.field-meta.xml
<CustomField>
    <fullName>Fee_Waiver_Applicable_to__c</fullName>
    <inlineHelpText>Who the fee is being waived for</inlineHelpText>
    <label>Fee Waiver Applicable to:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net new</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>All Merchants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>