unpackaged/main/default/objects/Contract/fields/Fee_Waiver_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Fee_Waiver_Period_months__c</fullName>
    <label>Fee Waiver Period (months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>