unpackaged/main/default/objects/Contract/fields/Free_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Free_User_Count__c</fullName>
    <description>Calculation of the number of free users on the Soluno subscription.</description>
    <label>Free User Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>