unpackaged/main/default/objects/Contract/fields/Internal_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Signed_Date__c</fullName>
    <label>Internal Signed Date</label>
    <type>Date</type>
</CustomField>