unpackaged/main/default/objects/Contract/fields/InternalSignedby__c.field-meta.xml
<CustomField>
    <fullName>InternalSignedby__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Signed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>