unpackaged/main/default/objects/Contract/fields/Minimum_Amount_Processed__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_Processed__c</fullName>
    <inlineHelpText>The minimum amount the merchant is required to process within a specific timeframe (ex: $6000 over a 6-month period).</inlineHelpText>
    <label>Minimum Amount Processed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>