unpackaged/main/default/objects/Contract/fields/Monthly_Fees_Waived__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fees_Waived__c</fullName>
    <label>Monthly Fees Waived</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>