unpackaged/main/default/objects/Contract/fields/Non_interference_agreement__c.field-meta.xml
<CustomField>
    <fullName>Non_interference_agreement__c</fullName>
    <inlineHelpText>Strategic Non-Compete:CANNOT sell/cross-sell LPM to all customers (Sales determine customer’s LPM)
Even if a customer/prospect initiates (i.e. asks for recommendation)

Non-Strategic:CANNOT cross-sell LPMs to customers that had an active integration in the last 6 months or referred by a partner in the last year unless a customer/prospect initiates (i.e. asks for recommendation)

Strategic:CANNOT sell/cross-sell LPMs to customers active with integration or referred by a partner (regardless of timeline</inlineHelpText>
    <label>Non-interference agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Strategic non-compete</fullName>
            </value>
            <value>
                <fullName>Non-strategic</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>