unpackaged/main/default/objects/Contract/fields/Non_Standard_Merchant_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Merchant_Pricing__c</fullName>
    <inlineHelpText>When selecting Yes, non-standard pricing is required.</inlineHelpText>
    <label>Non-Standard Merchant Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>