unpackaged/main/default/objects/Contract/fields/of_Tiers_standard_pricing__c.field-meta.xml
<CustomField>
    <fullName>of_Tiers_standard_pricing__c</fullName>
    <label># of Tiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>