unpackaged/main/default/objects/Contract/fields/Partner_Fee_Waiver_Charge__c.field-meta.xml
<CustomField>
    <fullName>Partner_Fee_Waiver_Charge__c</fullName>
    <inlineHelpText>The amount charged to the partner by AffiniPay if we waives fees.</inlineHelpText>
    <label>Partner Fee Waiver Charge</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>