unpackaged/main/default/objects/Contract/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>