unpackaged/main/default/objects/Contract/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Options</fullName>
            </value>
            <value>
                <fullName>Preferred Option</fullName>
            </value>
            <value>
                <fullName>Native Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>