unpackaged/main/default/objects/Contract/fields/Promo_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promo_Bonus_Amount__c</fullName>
    <label>Promo Bonus Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>