unpackaged/main/default/objects/Contract/fields/Promo_Bonus_Notes__c.field-meta.xml
<CustomField>
    <fullName>Promo_Bonus_Notes__c</fullName>
    <label>Promo Bonus Notes</label>
    <type>TextArea</type>
</CustomField>