unpackaged/main/default/objects/Contract/fields/Referral_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bonus__c</fullName>
    <label>Referral Bonus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>