unpackaged/main/default/objects/Contract/fields/Referral_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bonus_Amount__c</fullName>
    <label>Referral Bonus Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>