unpackaged/main/default/objects/Contract/fields/Royalties_paid_to_other_partner_relation__c.field-meta.xml
<CustomField>
    <fullName>Royalties_paid_to_other_partner_relation__c</fullName>
    <label>Royalties paid to other partner relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>