unpackaged/main/default/objects/Contract/fields/Royalty_Statement_Timing__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Statement_Timing__c</fullName>
    <label>Royalty Statement Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly, no later than the 30 days following the end of each fiscal quarter</fullName>
            </value>
            <value>
                <fullName>Monthly, within 30 days of the end of each month</fullName>
            </value>
            <value>
                <fullName>Monthly, within 45 days of the end of each month</fullName>
            </value>
            <value>
                <fullName>Quarterly, 30 days following the end of each calendar quarter</fullName>
            </value>
            <value>
                <fullName>Quarterly, 30 days following the end of each fiscal quarter</fullName>
            </value>
            <value>
                <fullName>Quarterly, 45 days following the end of each fiscal quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>