unpackaged/main/default/objects/Contract/fields/Royalty_Survives_Termination__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Survives_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Royalty Survives Termination</label>
    <type>Checkbox</type>
</CustomField>