unpackaged/main/default/objects/Contract/fields/Signed_by__c.field-meta.xml
<CustomField>
    <fullName>Signed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>