unpackaged/main/default/objects/Contract/fields/Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Signed_Title__c</fullName>
    <label>Signed Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>