unpackaged/main/default/objects/Contract/fields/Statement_Creation__c.field-meta.xml
<CustomField>
    <fullName>Statement_Creation__c</fullName>
    <label>Statement Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>