unpackaged/main/default/objects/Contract/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>