unpackaged/main/default/objects/Contract/fields/Tier_1_BuyRate__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_BuyRate__c</fullName>
    <label>Tier 1 BuyRate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>