unpackaged/main/default/objects/Contract/fields/Tier_1_Min_non_standard__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Min_non_standard__c</fullName>
    <label>Tier 1 Min.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>