unpackaged/main/default/objects/Contract/fields/Tier_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Rate__c</fullName>
    <label>Tier 1 Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>