unpackaged/main/default/objects/Contract/fields/Tier_3_Min__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Min__c</fullName>
    <label>Tier 3 Min.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>