unpackaged/main/default/objects/Contract/fields/Tier_3_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Rate__c</fullName>
    <label>Tier 3 Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>