unpackaged/main/default/objects/Contract/fields/Tiers_standard__c.field-meta.xml
<CustomField>
    <fullName>Tiers_standard__c</fullName>
    <description>Standard tiers picklist</description>
    <label>Tiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>