unpackaged/main/default/objects/Contract/fields/Total_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users__c</fullName>
    <description>Contracted Users - Free User Count for Soluno subscription.</description>
    <formula>Contracted_Users__c -  Free_User_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contracted Users - Free User Count</inlineHelpText>
    <label>Total Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>