unpackaged/main/default/objects/Contract/fields/Volume_Type_Standard__c.field-meta.xml
<CustomField>
    <fullName>Volume_Type_Standard__c</fullName>
    <description>Volume type picklist for standard pricing</description>
    <label>Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral Volume</fullName>
            </value>
            <value>
                <fullName>Integrated Volume</fullName>
            </value>
            <value>
                <fullName>Integrated &amp; Referral Volume</fullName>
            </value>
            <value>
                <fullName>All volume for integrated merchants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>