unpackaged/main/default/objects/Contract/fields/X0_10_per_transaction__c.field-meta.xml
<CustomField>
    <fullName>X0_10_per_transaction__c</fullName>
    <label>$0.10 per transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>